--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
 spring.http.encoding.charset=UTF-8 
 #spring.http.encoding.enabled=true 
 #spring.http.encoding.force=true
